# anatolian-SAM

./: .gitignore  README.md  downloaded_videos.txt  pyproject.toml
data/mixed/: metadata.csv
data/raw/: dataset_index.csv
notebooks/: data_preparation.ipynb  sam_analysis.ipynb  sam_audio.ipynb  sam_finetuning.ipynb  yt_scrape.ipynb
